<resources>
    <string name="app_name">HomeWork_03_03_2019</string>
    <string name="game_label_tictactoe">Крестики нолики</string>
    <string name="game_label_tag">Пятнашки</string>

    <string name="label_currentMove">Текущий ход: </string>
    <string name="win_message">Победа игрока </string>
    <string name="draw_message">Ничья!</string>
    <string name="aiCheckLabel">Игра с ИИ</string>

    <!--Tag layout -->
    <string name="label_movesCnt">Сделано ходов :</string>
    <string name="placeholderDash">--</string>
    <string name="endgame_message">Победа!</string>

    <!-- MENU -->
    <!-- ticTacToe MENU -->
    <string name="TTTresumeGame">Продолжить игру</string>
    <string name="TTTnewGame3x3">Новая игра 3х3</string>
    <string name="TTTnewGame4x4">Новая игра 4х4</string>
    <string name="TTTnewGame5x5">Новая игра 5х5</string>
    <!-- ticTacToe MENU -->
    <string name="TagResumeGame">Продолжить игру</string>
    <string name="TagNewGame3x3">Новая игра, Легко</string>
    <string name="TagNewGame4x4">Новая игра, Средне</string>
    <string name="TagNewGame5x5">Новая игра, Тяжело</string>

</resources>
