<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:orderInCategory="100"
        android:id="@+id/ticTacToe"
        android:title="@string/game_label_tictactoe"
        app:showAsAction="never">
        <menu>
            <group android:id="@+id/resumeTTT">
                <item
                    android:orderInCategory="110"
                    android:id="@+id/TTTresumeGame"
                    android:title="@string/TTTresumeGame"
                    app:showAsAction="never"/>
            </group>
            <item
                android:orderInCategory="120"
                android:id="@+id/TTTnewGame3x3"
                android:title="@string/TTTnewGame3x3"
                app:showAsAction="never"/>
            <item
                android:orderInCategory="130"
                android:id="@+id/TTTnewGame4x4"
                android:title="@string/TTTnewGame4x4"
                app:showAsAction="never"/>
            <item
                android:orderInCategory="140"
                android:id="@+id/TTTnewGame5x5"
                android:title="@string/TTTnewGame5x5"
                app:showAsAction="never"/>
        </menu>
    </item>
    <item
        android:orderInCategory="200"
        android:id="@+id/Tag"
        android:title="@string/game_label_tag"
        app:showAsAction="never">
        <menu>
            <group android:id="@+id/resumeTag">
                <item
                    android:orderInCategory="210"
                    android:id="@+id/TagResumeGame"
                    android:title="@string/TagResumeGame"
                    app:showAsAction="never"/>
            </group>
            <item
                android:orderInCategory="220"
                android:id="@+id/TagNewGame3x3"
                android:title="@string/TagNewGame3x3"
                app:showAsAction="never"/>
            <item
                android:orderInCategory="230"
                android:id="@+id/TagNewGame4x4"
                android:title="@string/TagNewGame4x4"
                app:showAsAction="never"/>
            <item
                android:orderInCategory="240"
                android:id="@+id/TagNewGame5x5"
                android:title="@string/TagNewGame5x5"
                app:showAsAction="never"/>
        </menu>
    </item>
</menu>