<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_label_tag"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/stdMargin"
        android:textSize="@dimen/labelSize"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_movesCnt"
            android:layout_margin="@dimen/stdMargin"
            android:textSize="@dimen/secondaryTextSize"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholderDash"
            android:layout_margin="@dimen/stdMargin"
            android:textSize="@dimen/secondaryTextSize"
            android:id="@+id/movesCnt"/>
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/TagGameField">

        </GridLayout>
    </FrameLayout>

</LinearLayout>